--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -15,7 +15,7 @@
     --bg-color: #000000;
     --second-bg-color: #161616;
     --text-color: #fff;
-    --main-color: #b4d45c;
+    --main-color: #8bad2b;
 }
 
 html {
@@ -351,7 +351,7 @@ span {
 
 .service-box {
     background-color: var(--main-color);
-    height: 300px;
+    min-height: 300px;
     border-radius: 3rem;
     cursor: pointer;
     transition: 0.3s ease;
@@ -371,11 +371,11 @@ span {
     max-height: 200px;
     justify-content: center;
     align-items: center;
-    padding: 5em;
+    padding: 4em;
 }
 
 .service-info h4 {
-    font-size: 2.5rem;
+    font-size: 2rem; /* ลดขนาดลงเล็กน้อย */
     font-weight: 500;
     margin-bottom: 1rem;
 }
@@ -388,7 +388,7 @@ span {
 }
 
 .service-info ul {
-    font-size: 1.6rem;
+    font-size: clamp(0.9rem, 1.5vw, 1.4rem);
     font-weight: 400;
     max-height: 100px;
     margin: auto;
